388
You now get:
{code}
  <console>:5: error: class type required but Clss[T] forSome { type T } found
       object Obj extends (Clss[T] forSome { type T })
                                   ^
{code}
which is a bit more explicit.
